新增内存溢出场景